overflow bug 3

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   font-family: "Roboto", sans-serif;
 }
 
+.particles{
+  max-width: 100vw;
+  width: 100vw;
+}
+
 :root {
   --primary--color: #2da8d8ff;
   --secondary-color: #7342d6;
